// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationMap component doesnt shows warning if geo is provided 1`] = `
<EuiErrorBoundary>
  <EuiHideFor
    sizes={
      Array [
        "xl",
      ]
    }
  >
    <styled.span>
      <EuiButtonGroup
        idToSelectedMap={
          Object {
            "listBtn": true,
          }
        }
        isIconOnly={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "iconType": "list",
              "id": "listBtn",
              "label": "Bold",
              "name": "bold",
            },
            Object {
              "iconType": "mapMarker",
              "id": "mapBtn",
              "label": "Italic",
              "name": "italic",
            },
          ]
        }
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        type="multi"
      />
    </styled.span>
  </EuiHideFor>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    justifyContent="flexEnd"
    wrap={true}
  >
    <EuiShowFor
      sizes={Array []}
    >
      <Styled(EuiFlexItem)
        grow={true}
      >
        <LocationStatusTags
          downs={0}
          locations={
            Array [
              Object {
                "downs": 0,
                "geo": Object {
                  "location": Object {
                    "lat": "40.730610",
                    "lon": " -73.935242",
                  },
                  "name": "New York",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:06.536Z",
                "ups": 4,
              },
              Object {
                "downs": 0,
                "geo": Object {
                  "location": Object {
                    "lat": "52.487448",
                    "lon": " 13.394798",
                  },
                  "name": "Tokyo",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:04.354Z",
                "ups": 4,
              },
            ]
          }
          ups={0}
        />
      </Styled(EuiFlexItem)>
    </EuiShowFor>
    <EuiShowFor
      sizes={
        Array [
          "xl",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            monitorLocations={
              Object {
                "locations": Array [
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "location": Object {
                        "lat": "40.730610",
                        "lon": " -73.935242",
                      },
                      "name": "New York",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:06.536Z",
                    "ups": 4,
                  },
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "location": Object {
                        "lat": "52.487448",
                        "lon": " 13.394798",
                      },
                      "name": "Tokyo",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:04.354Z",
                    "ups": 4,
                  },
                ],
                "monitorId": "wapo",
              }
            }
            upPoints={
              Array [
                Object {
                  "location": Object {
                    "lat": "40.730610",
                    "lon": " -73.935242",
                  },
                  "name": "New York",
                },
                Object {
                  "location": Object {
                    "lat": "52.487448",
                    "lon": " 13.394798",
                  },
                  "name": "Tokyo",
                },
              ]
            }
          />
        </styled.div>
      </EuiFlexItem>
    </EuiShowFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;

exports[`LocationMap component renders correctly against snapshot 1`] = `
<EuiErrorBoundary>
  <EuiHideFor
    sizes={
      Array [
        "xl",
      ]
    }
  >
    <styled.span>
      <EuiButtonGroup
        idToSelectedMap={
          Object {
            "listBtn": true,
          }
        }
        isIconOnly={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "iconType": "list",
              "id": "listBtn",
              "label": "Bold",
              "name": "bold",
            },
            Object {
              "iconType": "mapMarker",
              "id": "mapBtn",
              "label": "Italic",
              "name": "italic",
            },
          ]
        }
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        type="multi"
      />
    </styled.span>
  </EuiHideFor>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    justifyContent="flexEnd"
    wrap={true}
  >
    <EuiShowFor
      sizes={Array []}
    >
      <Styled(EuiFlexItem)
        grow={true}
      >
        <LocationStatusTags
          downs={0}
          locations={
            Array [
              Object {
                "downs": 0,
                "geo": Object {
                  "location": Object {
                    "lat": "40.730610",
                    "lon": " -73.935242",
                  },
                  "name": "New York",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:06.536Z",
                "ups": 4,
              },
              Object {
                "geo": Object {
                  "location": Object {
                    "lat": "52.487448",
                    "lon": " 13.394798",
                  },
                  "name": "Tokyo",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:04.354Z",
              },
              Object {
                "downs": 0,
                "geo": Object {
                  "name": "Unnamed-location",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:02.753Z",
                "ups": 4,
              },
            ]
          }
          ups={0}
        />
      </Styled(EuiFlexItem)>
    </EuiShowFor>
    <EuiShowFor
      sizes={
        Array [
          "xl",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <LocationMissingWarning />
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            monitorLocations={
              Object {
                "locations": Array [
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "location": Object {
                        "lat": "40.730610",
                        "lon": " -73.935242",
                      },
                      "name": "New York",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:06.536Z",
                    "ups": 4,
                  },
                  Object {
                    "geo": Object {
                      "location": Object {
                        "lat": "52.487448",
                        "lon": " 13.394798",
                      },
                      "name": "Tokyo",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:04.354Z",
                  },
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "name": "Unnamed-location",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:02.753Z",
                    "ups": 4,
                  },
                ],
                "monitorId": "wapo",
              }
            }
            upPoints={
              Array [
                Object {
                  "location": Object {
                    "lat": "40.730610",
                    "lon": " -73.935242",
                  },
                  "name": "New York",
                },
                Object {
                  "location": Object {
                    "lat": "52.487448",
                    "lon": " 13.394798",
                  },
                  "name": "Tokyo",
                },
              ]
            }
          />
        </styled.div>
      </EuiFlexItem>
    </EuiShowFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;

exports[`LocationMap component renders named locations that have missing geo data 1`] = `
<EuiErrorBoundary>
  <EuiHideFor
    sizes={
      Array [
        "xl",
      ]
    }
  >
    <styled.span>
      <EuiButtonGroup
        idToSelectedMap={
          Object {
            "listBtn": true,
          }
        }
        isIconOnly={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "iconType": "list",
              "id": "listBtn",
              "label": "Bold",
              "name": "bold",
            },
            Object {
              "iconType": "mapMarker",
              "id": "mapBtn",
              "label": "Italic",
              "name": "italic",
            },
          ]
        }
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        type="multi"
      />
    </styled.span>
  </EuiHideFor>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    justifyContent="flexEnd"
    wrap={true}
  >
    <EuiShowFor
      sizes={Array []}
    >
      <Styled(EuiFlexItem)
        grow={true}
      >
        <LocationStatusTags
          downs={0}
          locations={
            Array [
              Object {
                "downs": 0,
                "geo": Object {
                  "location": undefined,
                  "name": "New York",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:06.536Z",
                "ups": 4,
              },
            ]
          }
          ups={0}
        />
      </Styled(EuiFlexItem)>
    </EuiShowFor>
    <EuiShowFor
      sizes={
        Array [
          "xl",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <LocationMissingWarning />
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            monitorLocations={
              Object {
                "locations": Array [
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "location": undefined,
                      "name": "New York",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:06.536Z",
                    "ups": 4,
                  },
                ],
                "monitorId": "wapo",
              }
            }
            upPoints={Array []}
          />
        </styled.div>
      </EuiFlexItem>
    </EuiShowFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;

exports[`LocationMap component shows warning if geo information is missing 1`] = `
<EuiErrorBoundary>
  <EuiHideFor
    sizes={
      Array [
        "xl",
      ]
    }
  >
    <styled.span>
      <EuiButtonGroup
        idToSelectedMap={
          Object {
            "listBtn": true,
          }
        }
        isIconOnly={true}
        onChange={[Function]}
        options={
          Array [
            Object {
              "iconType": "list",
              "id": "listBtn",
              "label": "Bold",
              "name": "bold",
            },
            Object {
              "iconType": "mapMarker",
              "id": "mapBtn",
              "label": "Italic",
              "name": "italic",
            },
          ]
        }
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        type="multi"
      />
    </styled.span>
  </EuiHideFor>
  <Styled(EuiFlexGroup)
    gutterSize="none"
    justifyContent="flexEnd"
    wrap={true}
  >
    <EuiShowFor
      sizes={Array []}
    >
      <Styled(EuiFlexItem)
        grow={true}
      >
        <LocationStatusTags
          downs={0}
          locations={
            Array [
              Object {
                "downs": 0,
                "geo": Object {
                  "location": Object {
                    "lat": "52.487448",
                    "lon": " 13.394798",
                  },
                  "name": "Tokyo",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:04.354Z",
                "ups": 4,
              },
              Object {
                "downs": 0,
                "geo": Object {
                  "name": "Unnamed-location",
                },
                "summary": Object {
                  "down": 0,
                  "up": 4,
                },
                "timestamp": "2020-01-13T22:50:02.753Z",
                "ups": 4,
              },
            ]
          }
          ups={0}
        />
      </Styled(EuiFlexItem)>
    </EuiShowFor>
    <EuiShowFor
      sizes={
        Array [
          "xl",
        ]
      }
    >
      <EuiFlexItem
        grow={false}
      >
        <LocationMissingWarning />
        <styled.div>
          <EmbeddedMap
            downPoints={Array []}
            monitorLocations={
              Object {
                "locations": Array [
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "location": Object {
                        "lat": "52.487448",
                        "lon": " 13.394798",
                      },
                      "name": "Tokyo",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:04.354Z",
                    "ups": 4,
                  },
                  Object {
                    "downs": 0,
                    "geo": Object {
                      "name": "Unnamed-location",
                    },
                    "summary": Object {
                      "down": 0,
                      "up": 4,
                    },
                    "timestamp": "2020-01-13T22:50:02.753Z",
                    "ups": 4,
                  },
                ],
                "monitorId": "wapo",
              }
            }
            upPoints={
              Array [
                Object {
                  "location": Object {
                    "lat": "52.487448",
                    "lon": " 13.394798",
                  },
                  "name": "Tokyo",
                },
              ]
            }
          />
        </styled.div>
      </EuiFlexItem>
    </EuiShowFor>
  </Styled(EuiFlexGroup)>
</EuiErrorBoundary>
`;
